initial work - imagemagick & pdiff

--- a/highlighter/tox.ini
+++ b/highlighter/tox.ini
@@ -1,13 +1,15 @@
 [tox]
-envlist = py27, py3, flake8
+envlist = py27, flake8
 skipsdist = true
 
 [testenv]
+passenv = *
 skip_install = true
 deps =
     -rrequirements/tests.txt
 commands =
-    py.test -r=a --verbose --driver=Firefox {posargs}
+    # py.test -r=a --verbose --driver=Firefox --allow-screenshot-capture=True --screenshots-path=/home/mbrandt/sux/highlighter/screenshots
+    py.test -r=a --verbose --driver=Firefox --allow-screenshot-capture=True
 
 [testenv:flake8]
 deps = -rrequirements/flake8.txt
@@ -21,3 +23,4 @@ addopts = --verbose -r=a --driver=Firefox
 testpaths = tests
 xfail_strict = true
 base_url = https://google.com
+screenshots_path = screenshots
